--- a/Lizzie/Base.lproj/Main.storyboard
+++ b/Lizzie/Base.lproj/Main.storyboard
@@ -550,6 +550,7 @@
                         <outlet property="selectPointsButton" destination="wtN-h9-zdS" id="G4S-4c-cOF"/>
                         <outlet property="timeEndSlider" destination="sEI-Vs-Te1" id="abg-qW-rrj"/>
                         <outlet property="timeStartSlider" destination="vZV-EL-HuV" id="WfQ-3c-BdO"/>
+                        <outlet property="uploadButton" destination="Xmk-99-zLM" id="CrP-VD-4so"/>
                         <segue destination="trF-OB-Kz1" kind="unwind" identifier="unwindSegue2ToMainViewController" unwindAction="unwindEmotionViewWithSegue:" id="MVC-zg-mi5"/>
                     </connections>
                 </viewController>
